@@ -324,6 +324,51 @@ namespace OpenRCT2::Scripting
             }
         }
 
+        int32_t SetIntervalOrTimeout(DukValue callback, int32_t delay, bool repeat)
+        {
+            auto& scriptEngine = GetContext()->GetScriptEngine();
+            auto ctx = scriptEngine.GetContext();
+            auto plugin = scriptEngine.GetExecInfo().GetCurrentPlugin();
+
+            int32_t handle = 0;
+            if (callback.is_function())
+            {
+                handle = scriptEngine.AddInterval(plugin, delay, repeat, std::move(callback));
+            }
+            else
+            {
+                duk_error(ctx, DUK_ERR_ERROR, "callback was not a function.");
+            }
+            return handle;
+        }
+
+        void ClearIntervalOrTimeout(int32_t handle)
+        {
+            auto& scriptEngine = GetContext()->GetScriptEngine();
+            auto plugin = scriptEngine.GetExecInfo().GetCurrentPlugin();
+            scriptEngine.RemoveInterval(plugin, handle);
+        }
+
+        int32_t setInterval(DukValue callback, int32_t delay)
+        {
+            return SetIntervalOrTimeout(callback, delay, true);
+        }
+
+        int32_t setTimeout(DukValue callback, int32_t delay)
+        {
+            return SetIntervalOrTimeout(callback, delay, false);
+        }
+
+        void clearInterval(int32_t handle)
+        {
+            ClearIntervalOrTimeout(handle);
+        }
+
+        void clearTimeout(int32_t handle)
+        {
+            ClearIntervalOrTimeout(handle);
+        }
+
     public:
         static void Register(duk_context* ctx)
         {
@@ -338,6 +383,10 @@ namespace OpenRCT2::Scripting
             dukglue_register_method(ctx, &ScContext::queryAction, "queryAction");
             dukglue_register_method(ctx, &ScContext::executeAction, "executeAction");
             dukglue_register_method(ctx, &ScContext::registerAction, "registerAction");
+            dukglue_register_method(ctx, &ScContext::setInterval, "setInterval");
+            dukglue_register_method(ctx, &ScContext::setTimeout, "setTimeout");
+            dukglue_register_method(ctx, &ScContext::clearInterval, "clearInterval");
+            dukglue_register_method(ctx, &ScContext::clearTimeout, "clearTimeout");
         }
     };
 } // namespace OpenRCT2::Scripting
